test(security): add regression tests for P0-2 and P0-3 security fixes (PRD-005)
Adds comprehensive security tests to prevent regression of P0-2 (reflection) and P0-3 (deep defensive copying) fixes.

**Test Coverage:**

1. **P0-2: Reflection Attack Prevention**
   - testSecurityManager_BlocksReflection_ManualTest (disabled)
   - NOTE: Java 21 disallows System.setSecurityManager() by default (JEP 411)
   - Real protection happens in DroolsSpanProcessor with JVM args
   - Test documents expected behavior for manual/integration testing

2. **P0-3: Deep Defensive Copying**
   - testSpanWrapper_DefensiveCopy: Validates unmodifiable map wrapper
   - testSpanWrapper_DeepDefensiveCopy: Validates nested List/Map/Set immutability
   - Ensures modifications throw UnsupportedOperationException

**Files Modified:**
- CapabilitySecurityTest.java (15 tests total)
  - Fixed testSpanWrapper_DefensiveCopy to expect UnsupportedOperationException
  - Added testSpanWrapper_DeepDefensiveCopy for nested collection mutation attempts
  - Added testSecurityManager_BlocksReflection_ManualTest (disabled due to Java 21 restrictions)
  - Documented SecurityManager testing limitations

**Test Results:**
- 14 tests passing (1 disabled)
- All P0-3 immutability guarantees validated
- P0-2 SecurityManager test documented for manual testing

**Security Status:**
- P0-1: ✅ TESTED (tenant isolation)
- P0-2: ⚠️ MANUAL TEST REQUIRED (SecurityManager requires JVM flags in Java 21)
- P0-3: ✅ TESTED (deep defensive copying validated)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>